--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,297 @@
-/* место для вашего кода */
+.default-container {
+  width: 100%;
+  padding: 0 25px;
+  margin: 0 auto;
+}
+
+/* header */
+
+.header {
+  display: flex;
+  align-items: center;
+  padding: 0 50px;
+  height: 293px;
+
+  font-size: 18px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.nav-menu {
+  display: flex;
+  gap: 26px;
+}
+
+.nav-menu-item {
+  list-style: circle;
+}
+
+.nav-menu-item:nth-child(1) {
+  list-style: none;
+}
+
+.nav-menu-item > a {
+  color: #000;
+  text-underline-offset: 4px;
+}
+
+.header-logo {
+  position: absolute;
+  /* у нас же еще паддинг тут 50px, не забываем */
+  left: calc(50% - 50px);
+}
+
+.nav-menu-item:nth-child(1) > a {
+  text-decoration: none;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  max-width: 240px;
+  gap: 1px;
+}
+
+.contacts > a {
+  color: black;
+  text-underline-offset: 4px;
+}
+
+/* overlay + мотивационная фигня */
+
+.motivation {
+  position: relative;
+  width: 100%;
+  height: 757px;
+  color: #fff;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: 0;
+  background-image: url("/images/cover.jpg");
+}
+
+.overlay::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.motivation-text {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+}
+
+.motivation-text > h1 {
+  margin: 0;
+  font-size: 100px;
+  line-height: 115%;
+  letter-spacing: 0.3em;
+}
+
+.motivation-text > h1:nth-child(1) {
+  position: absolute;
+  top: 165px;
+  left: 50px;
+}
+
+.motivation-text > h1:nth-child(2) {
+  position: absolute;
+  top: 300px;
+  left: 380px;
+}
+
+.motivation-text > h1:nth-child(3) {
+  position: absolute;
+  top: 435px;
+  left: 663px;
+}
+
+.motivation-actions {
+  position: absolute;
+
+  bottom: 50px;
+  width: 100%;
+  padding: 0 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-transform: uppercase;
+}
+
+.motivation-actions > h2 {
+  margin: 0;
+  word-spacing: 0.8em;
+  line-height: 28px;
+  font-weight: 400;
+  font-size: 22px;
+}
+
+.btn {
+  background: none;
+  padding: 12px 32px;
+  color: #fff;
+  border: solid #fff;
+  font-size: 22px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+/* лоты */
+.goods {
+  margin-top: 180px;
+}
+
+.goods-title {
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.goods-cards {
+  margin-top: 28px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.good-card {
+  position: relative;
+  height: 600px;
+  max-width: 334px;
+  padding: 48px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: #fff;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.good-card_overlay {
+  z-index: 0;
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6);
+  pointer-events: none;
+}
+
+.good-card_title,
+.good-card_description {
+  max-width: 254px;
+
+  z-index: 1;
+}
+
+.good-card_title > h2 {
+  font-size: 22px;
+  text-decoration: underline;
+  text-underline-offset: 1px;
+  text-transform: uppercase;
+}
+
+.good-card_description > p {
+  font-size: 20px;
+}
+
+#overlay1 {
+  background-image: url("/images/lot1.jpg");
+}
+#overlay2 {
+  background-image: url("/images/lot2.jpg");
+}
+#overlay3 {
+  background-image: url("/images/lot3.jpg");
+}
+
+.goods-see-more-container {
+  margin-top: 30px;
+  margin-left: 40px;
+}
+
+.goods-see-more {
+  font-size: 20px;
+  color: #000;
+  text-underline-offset: 2px;
+}
+
+/* about */
+
+.about {
+  margin-top: 120px;
+
+  display: flex;
+  gap: 72px;
+}
+
+.about-text {
+  margin-top: 98px;
+  max-width: 693px;
+}
+
+.about-text_title {
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about-text_description {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.about-text_description > p {
+  font-size: 24px;
+  line-height: 24px;
+}
+
+/* footer */
+
+.footer {
+  margin-top: 180px;
+  height: 180px;
+}
+
+.footer-container {
+  padding: 0 50px;
+  width: 100%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-menu-footer {
+  flex-direction: column;
+  text-align: center;
+  gap: 1px;
+}
+
+.nav-menu-footer > li {
+  list-style: none;
+}
+
+.footer-socials {
+  display: flex;
+  gap: 48px;
+  align-items: center;
+}
+
+.footer-socials > img {
+  width: 48px;
+}
